--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
 		body {
 			background-color:red;
 		}
-		#white {
-			color: white;
+		#pink {
+			color: pink;
 		}
 	</style>
 </head>
 <body>
 
-	<div id="white">Amending this file as a test</div>
+	<div id="pink">Amending this file as a test</div>
 
 	more changes
 
