--- a/index.html
+++ b/index.html
@@ -5,18 +5,18 @@
 		body {
 			background-color:red;
 		}
-		#pink {
-			color: pink;
+		#blue {
+			color: blue;
 		}
 	</style>
 </head>
 <body>
 
-	<div id="pink">Amending this file as a test</div>
+	<div id="blue">Amending this file as a test</div>
 
 	<p>more changes</p>
 
-	<p>even more changes</p>
+	<p>copy change for master</p>
 
 </body>
 </html>
