--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
 
-	<div id="pink">Amending this file as a test</div>
+	<div id="pink">why are you not merging a test</div>
 
 	<p>more changes</p>
 
